minor edits/typo fixes

--- a/twitter_timeline_to_csv.ipynb
+++ b/twitter_timeline_to_csv.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "A. Obtain and clean the data from a Twitter user's timeline\n",
     "\n",
-    "B. Export into a csv file and a Python dictonary\n",
+    "B. Export into a csv file and a Python dictionary\n",
     "\n",
     "C. Apply analysis tools from NLTK to get summary data and explore hypotheses about the user's tweets\n",
     "\n",
@@ -348,25 +348,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data in the created_at attribute looks like this: Sun Jul 01 23:04:00 +0000 2018\n",
-      "Data in the hashtags attribute looks like this: []\n",
-      "Data in the urls attribute looks like this: []\n",
+      "Data in the created_at attribute looks like this: Sun Jul 01 21:06:07 +0000 2018\n",
+      "Data in the hashtags attribute looks like this: [Hashtag(Text='STEMonStation')]\n",
+      "Data in the urls attribute looks like this: [URL(URL=https://t.co/sYCFHKxzBf, ExpandedURL=https://youtu.be/34bFgA3H3hQ)]\n",
       "Data in the source attribute looks like this: <a href=\"https://www.sprinklr.com\" rel=\"nofollow\">Sprinklr</a>\n"
      ]
     }
    ],
    "source": [
-    "print(\"Data in the created_at attribute looks like this:\", all_tweets[0].created_at)\n",
-    "print(\"Data in the hashtags attribute looks like this:\", all_tweets[0].hashtags)\n",
-    "print(\"Data in the urls attribute looks like this:\", all_tweets[0].urls)\n",
-    "print(\"Data in the source attribute looks like this:\", all_tweets[0].source)"
+    "print(\"Data in the created_at attribute looks like this:\", all_tweets[1].created_at)\n",
+    "print(\"Data in the hashtags attribute looks like this:\", all_tweets[1].hashtags)\n",
+    "print(\"Data in the urls attribute looks like this:\", all_tweets[1].urls)\n",
+    "print(\"Data in the source attribute looks like this:\", all_tweets[1].source)"
    ]
   },
   {
@@ -528,6 +528,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's run it, passing in the `all_tweets` list. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -537,8 +544,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can take a look at a single entry by using a string containing the ID of a tweet as the key."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -553,20 +567,20 @@
        " 'source': 'Sprinklr'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tweet_dict[\"1013529203990581249\"]"
+    "tweet_dict['1013529203990581249']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That's it for this tutorial!  Stay tuned for Part 2 in [this repo].(https://github.com/eleanorstrib/twitter_timeline_analysis_2) and on [agatha.codes](https://medium.com/agatha-codes) very soon."
+    "That's it for this tutorial!  Stay tuned for Part 2 in (this repo).[https://github.com/eleanorstrib/twitter_timeline_analysis_2] and on [agatha.codes](https://medium.com/p/ff41b941ed6)."
    ]
   }
  ],
